# pytest-playwright-lint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pws003_should_pass  pyproject.toml
src/playwright_lint/: __init__.py  cli.py  exit_codes.py  finding.py  scanner.py
src/playwright_lint/rules/: __init__.py  no_networkidle.py  no_time_sleep.py  no_wait_for_timeout.py
tests/: conftest.py  test_cli.py  test_scanner.py
tests/fixtures/: pws001_should_pass.py  pws001_should_warn.py  pws002_should_pass.py  pws002_should_warn.py  pws003_should_warn.py
tests/rules/: test_no_networkidle.py  test_no_time_sleep.py  test_no_wait_for_timeout.py
